LPS-61518 Search portlet results are restricted to current site when "Display Site Facet" is unchecked starting from second search.

--- a/modules/apps/search/search-web/src/main/resources/META-INF/resources/main_search.jspf
+++ b/modules/apps/search/search-web/src/main/resources/META-INF/resources/main_search.jspf
@@ -114,7 +114,7 @@ Hits hits = indexer.search(searchContext);
 
 								form.fm('<%= SearchContainer.DEFAULT_CUR_PARAM %>').val(1);
 
-								submitForm(form);
+								<portlet:namespace />submitForm(form);
 							}
 						}
 					}
